--- a/movie-man-view/package.json
+++ b/movie-man-view/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "emoji-picker-react": "^4.14.1",
+    "firebase": "^12.4.0",
     "http-proxy-middleware": "^3.0.2",
     "peerflix": "^0.39.0",
     "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-range": "^1.10.0",
